Updated by task 'FY25_February_AA_ReleaseNotes_HO1'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics.en/commit/a293b1dd1f40506583034abb18ae63f791b73bac

--- a/help/release-notes/2025.md
+++ b/help/release-notes/2025.md
@@ -3,15 +3,15 @@ title: Ver las notas de la versión de Adobe Analytics de 2025
 description: Notas de la versión de Analytics de 2025
 feature: Release Notes
 source-git-commit: 5bf3f561c471410e4ce1ca576ba34ea3849b0325
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '797'
-ht-degree: 97%
+ht-degree: 100%
 
 ---
 
 # Notas de la versión de Adobe Analytics de 2025
 
-Obtenga información sobre las últimas actualizaciones de la versión para los [productos de Adobe Experience Cloud](https://business.adobe.com/es/products/adobe-experience-cloud-products.html). Obtenga la documentación de autoayuda más reciente: tutoriales y cursos sobre Experience League.
+Obtenga información sobre las últimas actualizaciones de la versión para los [productos de Adobe Experience Cloud](https://business.adobe.com/es/products/adobe-experience-cloud-products.html?lang=es). Obtenga la documentación de autoayuda más reciente: tutoriales y cursos sobre Experience League.
 
 ## Enero de 2025 {#jan25}
 
@@ -49,7 +49,7 @@ Obtenga información sobre las últimas actualizaciones de la versión para los 
 
 | Aviso | Fecha de incorporación o actualización | Descripción |
 | ----------- | ---------- | ---------- |
-| **Los clientes que no sean de Campaign perderán acceso a Triggers** | 16 de octubre de 2023 | El 30 de enero de 2025, los clientes de Adobe Analytics que no tengan una licencia de Adobe Campaign perdieron el acceso a la capacidad de configurar y consumir [Déclencheur](https://experienceleague.adobe.com/es/docs/core-services/interface/services/triggers). Los clientes deben adquirir Campaign o planear dejar de utilizar Triggers, o buscar otras herramientas de Adobe que ofrezcan las funcionalidades de Triggers. |
+| **Los clientes que no sean de Campaign perderán acceso a Triggers** | 16 de octubre de 2023 | El 30 de enero de 2025, los clientes de Adobe Analytics que no tengan una licencia de Adobe Campaign perderán acceso a la capacidad de configurar y utilizar [Triggers](https://experienceleague.adobe.com/es/docs/core-services/interface/services/triggers). Los clientes deben adquirir Campaign o planear dejar de utilizar Triggers, o buscar otras herramientas de Adobe que ofrezcan las funcionalidades de Triggers. |
 
 ### Avisos de final de la vida útil
 
